# ROS2024

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yaml  redshift_entrypoint.sh  start-apriltab-ros.sh  start-arducam.sh  start-detection.sh  start-image-proc.sh  start-inverse.sh  start-lifesigns.sh  start-logitech.sh  start-monitor.sh  start-odometry.sh  start-redshift-detection.sh  start-usb-cam.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
misc/: README  apriltag.yaml  apriltag_ros.tar  arducam_cam.yaml  launch1.xml  launch2.xml  logitech_cam.yaml  tags_36h11.yaml
src/install/: local_setup.sh  setup.sh
src/install/roborio_msgs/share/roborio_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/redshift_cpp_odometry/: CMakeLists.txt  package.xml
src/redshift_cpp_odometry/src/: lifesigns.cpp
src/redshift_detections/: package.xml  setup.cfg  setup.py
src/redshift_detections/redshift_detections/: redshift_detections.py
src/redshift_monitor/: package.xml  setup.cfg  setup.py
src/redshift_monitor/redshift_monitor/: redshift_lifesigns.py  redshift_monitor.py
src/redshift_odometry/: package.xml  setup.cfg  setup.py
src/redshift_odometry/launch/: arducam_launch.py  logitech_launch.py  old_arducam_launch.py  old_logitech_launch.py  start_launch.py
src/redshift_odometry/redshift_odometry/: redshift_inverse.py  redshift_odometry.py
src/roborio_msgs/: CMakeLists.txt
src/roborio_msgs/msg/: RoborioOdometry.msg  RoborioTags.msg
(+26 files in other folders)
